Save Formatting for UMLBox